# magg

./: Cargo.toml  README.md  Taskfile.yml
docs/: PUBLISHER.md  README.md
manual/: book.toml
manual/src/: README.md
src/: cli.rs  errors.rs  lib.rs  main.rs  new_cli.rs  publisher.rs  readme.rs  utils.rs  workspace.rs
src/changelog/: mod.rs
src/code_of_conduct/: CODE_OF_CONDUCT.md  mod.rs
src/licenses/: APACHE-NOTICE  MIT  mod.rs
tests/: mod.rs
tests/test_cli/: test_help.rs  test_no_arguments.rs
tests/test_publisher/: mod.rs
tests/test_publisher/test_false_version_workspace_in_dependency_manifest/: mod.rs
tests/test_publisher/test_false_workspace_in_published_dependency_in_dependency_manifest/: mod.rs
tests/test_publisher/test_invalid_dependencies_dependency_manifest/: mod.rs
tests/test_publisher/test_invalid_dependency_manifest/: mod.rs
tests/test_publisher/test_invalid_dev_dependencies_dependency_manifest/: mod.rs
tests/test_publisher/test_invalid_name_in_dependency_manifest/: mod.rs
tests/test_publisher/test_invalid_order_of_published_dependencies/: mod.rs
tests/test_publisher/test_invalid_path_dependency_formatting/: Cargo.toml  mod.rs
tests/test_publisher/test_invalid_version_workspace_in_dependency_manifest/: mod.rs
tests/test_publisher/test_invalid_workspace_dependencies/: Cargo.toml  mod.rs
tests/test_publisher/test_invalid_workspace_in_published_dependency_in_dependency_manifest/: mod.rs
tests/test_publisher/test_invalid_workspace_version/: Carqo.toml  mod.rs
tests/test_publisher/test_mismatched_name_in_dependency_manifest/: mod.rs
tests/test_publisher/test_no_crates_to_publish/: Cargo.toml  mod.rs
tests/test_publisher/test_no_workspace/: mod.rs
(+42 files in other folders)
