[package]
name = "magg"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Sophisticated tooling for Rust developers"
repository = "https://github.com/EngosSoftware/magg.git"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2024"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github/",
    ".gitignore",
    "CODE_OF_CONDUCT.md",
    "manual/"
]

[lib]
name = "magg"
path = "src/lib.rs"

[[bin]]
name = "magg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["cargo"] }
regex = "1.12.2"
time = "0.3.46"
toml = "0.9.8"

[dev-dependencies]
cli-assert = "0.1.9"
